test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/goto_label_main_2.plx



pub fn main(none) i32 {
    jump _main
    return 0
    label _main
    return 1
}
