test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/plx1_if_no_block_1.plx
pub fn main(none) i32 {
    if 1 return 0
}
